--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -5,14 +5,16 @@ layout: default
 
 <!DOCTYPE html>
 <html class="no-js">
+
 	<head>
-		<meta charset="UTF-8" />
+		<meta charset="UTF-8"/>
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Hux - Timeline</title>
-		<link rel="stylesheet" type="text/css" href="css/timeline.css" />
+		<title>Resuly - Timeline</title>
+		<link rel="stylesheet" type="text/css" href="css/timeline.css"/>
 		<script src="js/modernizr.custom.js"></script>
 	</head>
+
 	<body>
 		<div class="container" style="margin:0;padding:0;width:100%;">
 			<header>
@@ -23,43 +25,56 @@ layout: default
 			</header>
 			<div class="main">
 				<ul class="cbp_tmtimeline">
-					<!-- <li>
+					<li>
 						<div class="cbp_tmlabel">
-							<h2 id="boxoffice">Yanshuo.io (演说.io)</h2>
-							<time>2016.06</time>
-							<img src="images/work-yanshuo.jpg">
+							<h2 id="boxoffice">轨道交通线上购票系统</h2>
+							<time>2017.03</time>
+							<img src="images/work-afc.jpg">
 							<ul>
 								<li>
-									"Yanshuo.io" is an online full-featured presentation software to create Web-based slides which are linkable, sharable, cross-platform and without delivery friction. It differentiate from traditional presentation tools such as Powerpoint and Keynote due to its web-friendly and its strong belief in Web.
+									硕士毕业设计项目，为解决AFC系统与移动支付对接问题而设计。 实现不同城市地铁系统的微信支付购票，线路、车站、订单管理等功能。详见公众号轨道交通精灵。
 								</li>
 								<li class="skill">
-									<span><b>JS</b></span>
-									<span class="i-react"></span>
-									<span class="link"><a target="_blank" href="https://yanshuo.io">Try it</a></span>
+									<span>PHP</span>
+									<span>MySql</span>
+									<span>WeChat</span>
+									<span class="link">
+										<a target="_blank" href="/portfolio/images/qrcode-afc.jpg">查看</a>
+									</span>
 								</li>
 							</ul>
 						</div>
 					</li>
 					<li>
 						<div class="cbp_tmlabel">
-							<h2 id="boxoffice">BoxOffice @Wepiao</h2>
-							<time>2015.09</time>
-							<img src="images/work-wepiao-bo.jpg">
+							<h2 id="boxoffice">微信停车助手（苏州交警部门合作项目）</h2>
+							<time>2016.09</time>
+							<img src="images/work-parking.jpg">
 							<ul>
 								<li>
-									Wepiao Boxoffice app provides huge amounts of data and visualization of movies and cinemas including times, box office, attendance, ranking with a real-time analyzing back-end, which available on Web, iOS and Android.<br> As the <b>Lead Front-end Developer this project</b>, we built this app in the <a href="https://en.wikipedia.org/wiki/Single-page_application">Single-page Application Model</a> to provide a more fluid user experience with awesome <a href="http://facebook.github.io/react/">React.js</a>
+									违规停车是城市交通拥堵的重要原因之一，其主要功能为利用社交媒体让群众主动举报违规停车现象。
+									与Inhi Kim教授进行最初的方案讨论，并完成所有的开发工作与宣传展示等工作。
+									后与姑苏区交警大队形成合作关系，该项目纳入其2017年的财政预算项目之一。
+									<a href="#">详细介绍</a>
 								</li>
 								<li class="skill">
-									<span class="cbp_tmicon-phone"></span>
-									<span><b>JS</b></span>
-									<span class="i-react"></span>
-									<span class="link"><a target="_blank" href="http://piaofang.wepiao.com">Try it</a></span>
+									<span>PHP</span>
+									<span>MySql</span>
+									<span>WeChat</span>
+									<span>Photoshop</span>
+									<span>Premiere</span>
+									<span>Audition</span>
+									<span class="link">
+										<a target="_blank" href="#">查看</a>
+									</span>
 								</li>
 							</ul>
 						</div>
-					</li> -->
+					</li>
+
 				</ul>
 			</div>
 		</div>
 	</body>
+
 </html>
