--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -47,7 +47,7 @@ layout: default
 					</li>
 					<li>
 						<div class="cbp_tmlabel">
-							<h2 id="boxoffice">微信停车助手（苏州交警部门合作项目）</h2>
+							<h2 id="boxoffice">微信停车助手</h2>
 							<time>2016.09</time>
 							<img src="images/work-parking.jpg">
 							<ul>
@@ -55,7 +55,7 @@ layout: default
 									违规停车是城市交通拥堵的重要原因之一，其主要功能为利用社交媒体让群众主动举报违规停车现象。
 									与Inhi Kim教授进行最初的方案讨论，并完成所有的开发工作与宣传展示等工作。
 									后与姑苏区交警大队形成合作关系，该项目纳入其2017年的财政预算项目之一。
-									<a href="#">详细介绍</a>
+									<a href="http://monash.v2tm.com/archives/212">详细介绍(含视频)</a>
 								</li>
 								<li class="skill">
 									<span>PHP</span>
