fix translation group link

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -233,7 +233,7 @@ layout: default
 		                        <span>Mysql</span>
 		                        <span>Aegisub</span>
 		                        <span class="link">
-												<a target="_blank" href="#">暂无链接</a>
+												<a target="_blank" href="http://video.v2tm.com/">查看</a>
 											</span>
 		                    </li>
 		                </ul>
@@ -450,7 +450,7 @@ layout: default
 													<span>Mysql</span>
 													<span>Aegisub</span>
 													<span class="link">
-											<a target="_blank" href="#">No Link</a>
+											<a target="_blank" href="http://video.v2tm.com/">View</a>
 										</span>
 											</li>
 									</ul>
