--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@ header-img: "img/about-bg.jpg"
 
     <p>一个热爱篮球、热爱前沿科技技术的男童。东南大学与 Monash University 双学位硕士，主修交通运输工程。</p>
 
-    <p>一些作品和项目，见<a href="/portfolio">Portfolio</a> 与 <a href="http://github.com/huxpro">Github</a>；除了做交通课题研究，Web开发外，我也是<a href="http://monash.v2tm.com"> Transport and Urban Planning Arena</a> 研究成员，<a href="#">帝国字幕组</a>创立者。
+    <p>一些作品和项目，见<a href="/portfolio">Portfolio</a> 与 <a href="http://github.com/resuly" target="_blank">Github</a>；除了做交通课题研究，Web开发外，我也是<a href="http://monash.v2tm.com" target="_blank"> Transport and Urban Planning Arena</a> 研究成员，<a href="http://video.v2tm.com/" target="_blank">帝国字幕组</a> 与 <a href="http://www.v2tm.com/" target="_blank">火麒麟</a> 的创立者。
 
     <h5>发表文章</h5>
     <ul>
@@ -35,11 +35,11 @@ header-img: "img/about-bg.jpg"
 
     <p>Hi, I’m Bo from Southeast University - Monash University Joint Graduate School. I am a student major in Transportaion System who interested in ITS, Web Development and Deep Learing. I have a lot of experience in ITS & Web Development. Moreover, I always like to explore something new.</p>
 
-    <p>My projects lay in my <a href="/portfolio">Portfolio</a> and <a href="http://github.com/huxpro">Github</a>. I am a member of Transport and Urban Planning Arena and the creator of Empire Translation Group. </p>
+    <p>My projects lay in my <a href="/portfolio">Portfolio</a> and <a href="http://github.com/resuly" target="_blank">Github</a>. I am a member of <a href="http://monash.v2tm.com" target="_blank">Transport and Urban Planning Arena</a> and the creator of <a href="http://video.v2tm.com/" target="_blank">Empire Translation Group</a> & <a href="http://www.v2tm.com/" target="_blank">V2TM.com</a>. </p>
 
     <h5>Publication</h5>
     <ul>
-        <li><b>Social media application for illegal parking problem</b><i> Bo WANG[1], Liang HUA[2] and Inhi KIM[3] </i> <a href="http://cota-home.org/cictp/cictp2017.html">CICTP 2017</a></li>
+        <li><b>Social media application for illegal parking problem</b><i> Bo WANG[1], Liang HUA[2] and Inhi KIM[3] </i> <a href="http://cota-home.org/cictp/cictp2017.html" target="_blank">CICTP 2017</a></li>
     </ul>
 </div>
 
