--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -23,8 +23,8 @@ layout: default
 
 				<!-- Language Selector -->
 				<select class="sel-lang" onchange= "onLanChange(this.options[this.options.selectedIndex].value)">
-				    <option value="0"> 中文 Chinese </option>
 				    <option value="1" selected> 英文 English </option>
+						<option value="0"> 中文 Chinese </option>
 				</select>
 
 			</header>
@@ -475,16 +475,15 @@ layout: default
 		    function _render(){
 		        var _hash = window.location.hash;
 		        // en
-		        if(_hash == "#en"){
-		            $select.selectedIndex = 1;
-		            $en.style.display = "block";
-		            $zh.style.display = "none";
-		        // zh by default
-		        }else{
+						if(_hash == "#zh"){
 		            // not trigger onChange, otherwise cause a loop call.
-		            $select.selectedIndex = 0;
+		            $select.selectedIndex = 1;
 		            $zh.style.display = "block";
 		            $en.style.display = "none";
+		        }else{
+		            $select.selectedIndex = 0;
+		            $en.style.display = "block";
+		            $zh.style.display = "none";
 		        }
 		    }
 
