--- a/about.html
+++ b/about.html
@@ -33,13 +33,18 @@ header-img: "img/about-bg.jpg"
 <div class="en post-container">
     <blockquote><p>Yesterday, you said tomorrow.</p></blockquote>
 
-    <p>Hi, I’m Bo from Southeast University - Monash University Joint Graduate School. I am a student major in Transportaion System who interested in ITS, Web Development and Deep Learing. I have a lot of experience in ITS & Web Development. Moreover, I always like to explore something new.</p>
+    <p>Hi, I’m Bo from Southeast University - Monash University Joint Graduate School. I am a student majoring in Transportation System who is interested in ITS (Intelligent Transportation System), Web Development and Deep Learning. I have a lot of experience in ITS & Web Development as you can find this blog.</p>
 
-    <p>My projects lay in my <a href="/portfolio">Portfolio</a> and <a href="http://github.com/resuly" target="_blank">Github</a>. I am a member of <a href="http://monash.v2tm.com" target="_blank">Transport and Urban Planning Arena</a> and the creator of <a href="http://video.v2tm.com/" target="_blank">Empire Translation Group</a> & <a href="http://www.v2tm.com/" target="_blank">V2TM.com</a>. </p>
+    <h5>Contact</h5>
+    <p>
+      Email: resuly (at) foxmail.com <br>
+      Wechat: resuly <br>
+      Phone: +86 17601448726
+    </p>
 
     <h5>Publication</h5>
     <ul>
-        <li><b>Social media application for illegal parking problem</b><i> Bo WANG[1], Liang HUA[2] and Inhi KIM[3] </i> <a href="http://cota-home.org/cictp/cictp2017.html" target="_blank">CICTP 2017</a></li>
+        <li><b>Social media application for illegal parking problem</b><i> Bo WANG[1], Liang HUA[2] and Inhi KIM[3] </i> <a href="http://cota-home.org/cictp/cictp2017.html" target="_blank">CICTP 2017</a>, 7~9 July, 2017, Shanghai</li>
     </ul>
 </div>
 
