--- a/about.html
+++ b/about.html
@@ -33,7 +33,9 @@ header-img: "img/about-bg.jpg"
 <div class="en post-container">
     <blockquote><p>Yesterday, you said tomorrow.</p></blockquote>
 
-    <p>Hi, I’m Bo from Southeast University - Monash University Joint Graduate School. I am a student majoring in Transportation System who is interested in ITS (Intelligent Transportation System), Web Development and Deep Learning. I have a lot of experience in ITS & Web Development as you can find this blog.</p>
+    <p>Hi, I’m Bo from Southeast University - Monash University Joint Graduate School, majoring in Transportaion System, also interested in ITS (Intelligent Transportation System), Web Development and Deep Learing. Most of projects I have done are in the fields of ITS & Web Development as you can find this blog.</p>
+
+    <p>FYI, I am a member of Transport and Urban Planning Arena, and the co-founder of Empire Subtitle-making Group and V2TM.com.</p>
 
     <h5>Contact</h5>
     <p>
