--- a/about.html
+++ b/about.html
@@ -19,9 +19,9 @@ header-img: "img/about-bg.jpg"
         <p>Yesterday, you said tomorrow.</p>
     </blockquote>
 
-    <p>一个热爱篮球、热爱前沿科技技术的男童。东南大学与 Monash University 双学位硕士，主修交通运输工程。</p>
+    <p>一个热爱篮球、热爱前沿科技技术的极客。现就读与东南大学 - Monash University 联合研究生院，主修交通运输工程智能交通方向，并对Web开发、深度学习略有研究。</p>
 
-    <p>一些作品和项目，见<a href="/portfolio">Portfolio</a> 与 <a href="http://github.com/resuly" target="_blank">Github</a>；除了做交通课题研究，Web开发外，我也是<a href="http://monash.v2tm.com" target="_blank"> Transport and Urban Planning Arena</a> 研究成员，<a href="http://video.v2tm.com/" target="_blank">帝国字幕组</a> 与 <a href="http://www.v2tm.com/" target="_blank">火麒麟</a> 的创立者。
+    <p>一些作品和项目，见本博客的 <a href="/portfolio">Portfolio</a> 与 <a href="http://github.com/resuly" target="_blank">Github</a>；除了做交通课题研究，Web开发外，我也是<a href="http://monash.v2tm.com" target="_blank"> Transport and Urban Planning Arena</a> 研究成员，<a href="http://video.v2tm.com/" target="_blank">帝国字幕组</a> 与 <a href="http://www.v2tm.com/" target="_blank">火麒麟</a> 的创立者。
 
     <h5>发表文章</h5>
     <ul>
