--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@ header-img: "img/about-bg.jpg"
     </ul>
 </div>
 
-<!-- Handle Language Change -->
+<!-- Language Change -->
 <script type="text/javascript">
     // get nodes
     var $zh = document.querySelector(".zh");
