--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@ header-img: "img/about-bg.jpg"
 
     <p>一个热爱篮球、热爱前沿科技技术的极客。现就读与东南大学 - Monash University 联合研究生院，主修交通运输工程智能交通方向，并对Web开发、深度学习略有研究。</p>
 
-    <p>一些作品和项目，见本博客的 <a href="/portfolio">Portfolio</a> 与 <a href="http://github.com/resuly" target="_blank">Github</a>；除了做交通课题研究，Web开发外，我也是<a href="http://monash.v2tm.com" target="_blank"> Transport and Urban Planning Arena</a> 研究成员，<a href="http://video.v2tm.com/" target="_blank">帝国字幕组</a> 与 <a href="http://www.v2tm.com/" target="_blank">火麒麟</a> 的创立者。
+    <p>一些作品和项目，见本博客的 <a href="/portfolio">Portfolio</a> 与 <a href="http://github.com/resuly" target="_blank">Github</a>；除了做交通课题研究，Web开发外，我也是<a href="http://inhi.kim" target="_blank"> Transport and Urban Planning Arena</a> 研究成员，<a href="http://video.v2tm.com/" target="_blank">帝国字幕组</a> 与 <a href="http://www.v2tm.com/" target="_blank">火麒麟</a> 的创立者。
 
     <h5>发表文章</h5>
     <ul>
@@ -35,7 +35,7 @@ header-img: "img/about-bg.jpg"
 
     <p>Hi, I’m Bo from Southeast University - Monash University Joint Graduate School, majoring in Transportation System, also interested in ITS (Intelligent Transportation System), Web Development and Deep Learning. Most of the projects I have done are in the fields of ITS & Web Development as you can find this blog.</p>
 
-    <p>FYI, I am a member of Transport and Urban Planning Arena, and the co-founder of Empire Subtitle-making Group and V2TM.com.</p>
+    <p>FYI, I am a member of <a href="http://inhi.kim" target="_blank">Transport and Urban Planning Arena</a>, and the co-founder of Empire Subtitle-making Group and V2TM.com.</p>
 
     <h5>Contact</h5>
     <p>
