--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@ header-img: "img/about-bg.jpg"
 <div class="en post-container">
     <blockquote><p>Yesterday, you said tomorrow.</p></blockquote>
 
-    <p>Hi, I’m Bo from Monash University Joint Graduate School, majoring in Transportation System, also interested in ITS (Intelligent Transportation System), Web Development and Deep Learning. Most of the projects I have done are in the fields of ITS & Web Development as you can find this blog.</p>
+    <p>Hi, I’m Bo from Monash University, majoring in Transportation Systems, also interested in ITS (Intelligent Transportation System), Web Development and Deep Learning. Most of the projects I have done are in the fields of ITS & Web Development as you can find this blog.</p>
 
     <p>FYI, I am a member of <a href="http://inhi.kim" target="_blank">Transport and Urban Planning Arena</a>, and the co-founder of Empire Subtitle-making Group and V2TM.com.</p>
 
