--- a/projects/3dconvs/index.html
+++ b/projects/3dconvs/index.html
@@ -2,7 +2,7 @@
 <head>
 <meta charset="utf-8">
 <title>The interactive visualization for the prediction of 3D ConvNets</title>
-<link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
