two more posts & style fix

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -34,7 +34,7 @@ layout: default
 
 					  <li>
 							<div class="cbp_tmlabel">
-									<h2>共享单车导航（进行中）</h2>
+									<h2>共享单车导航</h2>
 									<time>2017.04</time>
 									<img src="images/work-bike.jpg">
 									<ul>
@@ -247,7 +247,7 @@ layout: default
 				<ul class="cbp_tmtimeline">
 					<li>
 						<div class="cbp_tmlabel">
-								<h2>Navigation of Sharing Bike (On going)</h2>
+								<h2>Navigation of Sharing Bike</h2>
 								<time>2017.04</time>
 								<img src="images/work-bike.jpg">
 								<ul>
