--- a/about.html
+++ b/about.html
@@ -23,9 +23,11 @@ header-img: "img/about-bg.jpg"
 
     <p>一些作品和项目，见本博客的 <a href="/portfolio">Portfolio</a> 与 <a href="http://github.com/resuly" target="_blank">Github</a>；除了做交通课题研究，Web开发外，我也是<a href="http://inhi.kim" target="_blank"> Transport and Urban Planning Arena</a> 研究成员，<a href="http://video.v2tm.com/" target="_blank">帝国字幕组</a> 与 <a href="http://www.v2tm.com/" target="_blank">火麒麟</a> 的创立者。
 
-    <h5>发表文章</h5>
+    <h5>出版文章</h5>
     <ul>
         <li><b>Social media application for illegal parking problem</b><i> Bo WANG[1], Liang HUA[2] and Inhi KIM[3] </i> <a href="http://cota-home.org/cictp/cictp2017.html">CICTP 2017</a></li>
+        <li><a href="https://doi.org/10.1016/j.trpro.2018.11.029."><b>Short-term prediction for bike-sharing service using machine learning</b></a>
+          <i> Bo WANG[1] and Inhi KIM[2] </i>, Transportation Research Procedia, Volume 34, 2018, Pages 171-178, ISSN 2352-1465,</li>
     </ul>
 </div>
 
@@ -45,6 +47,8 @@ header-img: "img/about-bg.jpg"
     <h5>Publication</h5>
     <ul>
         <li><b>Social media application for illegal parking problem</b><i> Bo WANG[1], Liang HUA[2] and Inhi KIM[3] </i> <a href="http://cota-home.org/cictp/cictp2017.html" target="_blank">CICTP 2017</a>, 7~9 July, 2017, Shanghai</li>
+        <li><a href="https://doi.org/10.1016/j.trpro.2018.11.029."><b>Short-term prediction for bike-sharing service using machine learning</b></a>
+          <i> Bo WANG[1] and Inhi KIM[2] </i>, Transportation Research Procedia, Volume 34, 2018, Pages 171-178, ISSN 2352-1465,</li>
     </ul>
 </div>
 
