--- a/about.html
+++ b/about.html
@@ -25,9 +25,16 @@ header-img: "img/about-bg.jpg"
 
     <h5>出版文章</h5>
     <ul>
-        <li><b>Social media application for illegal parking problem</b><i> Bo WANG[1], Liang HUA[2] and Inhi KIM[3] </i> <a href="http://cota-home.org/cictp/cictp2017.html">CICTP 2017</a></li>
-        <li><a href="https://doi.org/10.1016/j.trpro.2018.11.029."><b>Short-term prediction for bike-sharing service using machine learning</b></a>
-          <i> Bo WANG[1] and Inhi KIM[2] </i>, Transportation Research Procedia, Volume 34, 2018, Pages 171-178, ISSN 2352-1465,</li>
+        <li>
+            <a href="https://ascelibrary.org/doi/10.1061/9780784480915.006">
+              <b>Social media application for illegal parking problem</b>
+            </a>
+          <i> Bo WANG[1], Liang HUA[2] and Inhi KIM[3] </i>, 17th COTA International Conference of Transportation.</li>
+        <li>
+            <a href="https://doi.org/10.1016/j.trpro.2018.11.029.">
+                <b>Short-term prediction for bike-sharing service using machine learning</b>
+            </a>
+            <i> Bo WANG[1] and Inhi KIM[2] </i>, Transportation Research Procedia, Volume 34, 2018, Pages 171-178, ISSN 2352-1465.</li>
     </ul>
 </div>
 
@@ -46,9 +53,16 @@ header-img: "img/about-bg.jpg"
 
     <h5>Publication</h5>
     <ul>
-        <li><b>Social media application for illegal parking problem</b><i> Bo WANG[1], Liang HUA[2] and Inhi KIM[3] </i> <a href="http://cota-home.org/cictp/cictp2017.html" target="_blank">CICTP 2017</a>, 7~9 July, 2017, Shanghai</li>
-        <li><a href="https://doi.org/10.1016/j.trpro.2018.11.029."><b>Short-term prediction for bike-sharing service using machine learning</b></a>
-          <i> Bo WANG[1] and Inhi KIM[2] </i>, Transportation Research Procedia, Volume 34, 2018, Pages 171-178, ISSN 2352-1465,</li>
+        <li>
+            <a href="https://ascelibrary.org/doi/10.1061/9780784480915.006">
+              <b>Social media application for illegal parking problem</b>
+            </a>
+          <i> Bo WANG[1], Liang HUA[2] and Inhi KIM[3] </i>, 17th COTA International Conference of Transportation.</li>
+        <li>
+            <a href="https://doi.org/10.1016/j.trpro.2018.11.029.">
+                <b>Short-term prediction for bike-sharing service using machine learning</b>
+            </a>
+            <i> Bo WANG[1] and Inhi KIM[2] </i>, Transportation Research Procedia, Volume 34, 2018, Pages 171-178, ISSN 2352-1465.</li>
     </ul>
 </div>
 
