--- a/about.html
+++ b/about.html
@@ -26,15 +26,22 @@ header-img: "img/about-bg.jpg"
     <h5>出版文章</h5>
     <ul>
         <li>
-            <a href="https://ascelibrary.org/doi/10.1061/9780784480915.006">
-              <b>Social media application for illegal parking problem</b>
+            Wang, B., Hua, L., & Kim, I. (2018).
+            Social media application for illegal parking problem.
+            In H. Wang, J. Sun, J. Lu, L. Zhang, Y. Zhang, & S. Fang (Eds.), CICTP 2017: Transportation Reform and Change - Equity, Inclusiveness, Sharing, and Innovation - Proceedings of the 17th COTA International Conference of Transportation Professionals (pp. 49-58).
+            Reston VA USA: American Society of Civil Engineers.
+            <a href="https://doi.org/10.1061/9780784480915.006">
+              https://doi.org/10.1061/9780784480915.006
             </a>
-          <i> Bo WANG[1], Liang HUA[2] and Inhi KIM[3] </i>, 17th COTA International Conference of Transportation.</li>
+        </li>
         <li>
-            <a href="https://doi.org/10.1016/j.trpro.2018.11.029.">
-                <b>Short-term prediction for bike-sharing service using machine learning</b>
+            Wang, B. & Kim, I. (2018).
+            Short-term prediction for bike-sharing service using machine learning.
+            Transportation Research Procedia, Volume 34, 2018, Pages 171-178, ISSN 2352-1465.
+            <a href="https://doi.org/10.1016/j.trpro.2018.11.029">
+              https://doi.org/10.1016/j.trpro.2018.11.029
             </a>
-            <i> Bo WANG[1] and Inhi KIM[2] </i>, Transportation Research Procedia, Volume 34, 2018, Pages 171-178, ISSN 2352-1465.</li>
+        </li>
     </ul>
 </div>
 
@@ -54,15 +61,22 @@ header-img: "img/about-bg.jpg"
     <h5>Publication</h5>
     <ul>
         <li>
-            <a href="https://ascelibrary.org/doi/10.1061/9780784480915.006">
-              <b>Social media application for illegal parking problem</b>
+            Wang, B., Hua, L., & Kim, I. (2018).
+            Social media application for illegal parking problem.
+            In H. Wang, J. Sun, J. Lu, L. Zhang, Y. Zhang, & S. Fang (Eds.), CICTP 2017: Transportation Reform and Change - Equity, Inclusiveness, Sharing, and Innovation - Proceedings of the 17th COTA International Conference of Transportation Professionals (pp. 49-58).
+            Reston VA USA: American Society of Civil Engineers.
+            <a href="https://doi.org/10.1061/9780784480915.006">
+              https://doi.org/10.1061/9780784480915.006
             </a>
-          <i> Bo WANG[1], Liang HUA[2] and Inhi KIM[3] </i>, 17th COTA International Conference of Transportation.</li>
+        </li>
         <li>
-            <a href="https://doi.org/10.1016/j.trpro.2018.11.029.">
-                <b>Short-term prediction for bike-sharing service using machine learning</b>
+            Wang, B. & Kim, I. (2018).
+            Short-term prediction for bike-sharing service using machine learning.
+            Transportation Research Procedia, Volume 34, 2018, Pages 171-178, ISSN 2352-1465.
+            <a href="https://doi.org/10.1016/j.trpro.2018.11.029">
+              https://doi.org/10.1016/j.trpro.2018.11.029
             </a>
-            <i> Bo WANG[1] and Inhi KIM[2] </i>, Transportation Research Procedia, Volume 34, 2018, Pages 171-178, ISSN 2352-1465.</li>
+        </li>
     </ul>
 </div>
 
