--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@ header-img: "img/about-bg.jpg"
     <p>一些作品和项目，见本博客的 <a href="/portfolio">Portfolio</a> 与 <a href="http://github.com/resuly" target="_blank">Github</a>；除了做交通课题研究，Web开发外，我也是<a href="http://inhi.kim" target="_blank"> Transport and Urban Planning Arena</a> 研究成员，<a href="http://video.v2tm.com/" target="_blank">帝国字幕组</a> 与 <a href="http://www.v2tm.com/" target="_blank">火麒麟</a> 的创立者。
 
     <h5>出版文章</h5>
-    <ul>
+    <ul class="publication">
         <li>
             Wang, B., Hua, L., & Kim, I. (2018).
             Social media application for illegal parking problem.
@@ -59,7 +59,7 @@ header-img: "img/about-bg.jpg"
     </p>
 
     <h5>Publication</h5>
-    <ul>
+    <ul class="publication">
         <li>
             Wang, B., Hua, L., & Kim, I. (2018).
             Social media application for illegal parking problem.
