--- a/about.html
+++ b/about.html
@@ -42,6 +42,14 @@ header-img: "img/about-bg.jpg"
               https://doi.org/10.1016/j.trpro.2018.11.029
             </a>
         </li>
+        <li>
+            Wang, B., Khaled, S. & Kim, I. (2019).
+            Reveal the hidden layer via entity embedding in traffic prediction.
+            Procedia Computer Science, Volume 151, 2019, Pages 163-170.
+            <a href="https://doi.org/10.1016/j.procs.2019.04.025">
+              https://doi.org/10.1016/j.procs.2019.04.025
+            </a>
+        </li>
     </ul>
 </div>
 
@@ -75,6 +83,14 @@ header-img: "img/about-bg.jpg"
             Transportation Research Procedia, Volume 34, 2018, Pages 171-178, ISSN 2352-1465.
             <a href="https://doi.org/10.1016/j.trpro.2018.11.029">
               https://doi.org/10.1016/j.trpro.2018.11.029
+            </a>
+        </li>
+        <li>
+            Wang, B., Khaled, S. & Kim, I. (2019).
+            Reveal the hidden layer via entity embedding in traffic prediction.
+            Procedia Computer Science, Volume 151, 2019, Pages 163-170.
+            <a href="https://doi.org/10.1016/j.procs.2019.04.025">
+              https://doi.org/10.1016/j.procs.2019.04.025
             </a>
         </li>
     </ul>
