--- a/about.html
+++ b/about.html
@@ -26,16 +26,15 @@ header-img: "img/about-bg.jpg"
     <h5>出版文章</h5>
     <ul class="publication">
         <li>
-            Wang, B., Hua, L., & Kim, I. (2018).
-            Social media application for illegal parking problem.
-            In H. Wang, J. Sun, J. Lu, L. Zhang, Y. Zhang, & S. Fang (Eds.), CICTP 2017: Transportation Reform and Change - Equity, Inclusiveness, Sharing, and Innovation - Proceedings of the 17th COTA International Conference of Transportation Professionals (pp. 49-58).
-            Reston VA USA: American Society of Civil Engineers.
-            <a href="https://doi.org/10.1061/9780784480915.006">
-              https://doi.org/10.1061/9780784480915.006
+            B Wang, K Shaaban & I Kim. (2019).
+            Reveal the hidden layer via entity embedding in traffic prediction.
+            Procedia Computer Science, Volume 151, 2019, Pages 163-170.
+            <a href="https://doi.org/10.1016/j.procs.2019.04.025">
+              https://doi.org/10.1016/j.procs.2019.04.025
             </a>
         </li>
         <li>
-            Wang, B. & Kim, I. (2018).
+            B Wang & I Kim. (2018).
             Short-term prediction for bike-sharing service using machine learning.
             Transportation Research Procedia, Volume 34, 2018, Pages 171-178, ISSN 2352-1465.
             <a href="https://doi.org/10.1016/j.trpro.2018.11.029">
@@ -43,11 +42,12 @@ header-img: "img/about-bg.jpg"
             </a>
         </li>
         <li>
-            Wang, B., Khaled, S. & Kim, I. (2019).
-            Reveal the hidden layer via entity embedding in traffic prediction.
-            Procedia Computer Science, Volume 151, 2019, Pages 163-170.
-            <a href="https://doi.org/10.1016/j.procs.2019.04.025">
-              https://doi.org/10.1016/j.procs.2019.04.025
+            B Wang, H Liang, & I Kim. (2018).
+            Social media application for illegal parking problem.
+            In H. Wang, J. Sun, J. Lu, L. Zhang, Y. Zhang, & S. Fang (Eds.), CICTP 2017: Transportation Reform and Change - Equity, Inclusiveness, Sharing, and Innovation - Proceedings of the 17th COTA International Conference of Transportation Professionals (pp. 49-58).
+            Reston VA USA: American Society of Civil Engineers.
+            <a href="https://doi.org/10.1061/9780784480915.006">
+              https://doi.org/10.1061/9780784480915.006
             </a>
         </li>
     </ul>
@@ -69,16 +69,15 @@ header-img: "img/about-bg.jpg"
     <h5>Publication</h5>
     <ul class="publication">
         <li>
-            Wang, B., Hua, L., & Kim, I. (2018).
-            Social media application for illegal parking problem.
-            In H. Wang, J. Sun, J. Lu, L. Zhang, Y. Zhang, & S. Fang (Eds.), CICTP 2017: Transportation Reform and Change - Equity, Inclusiveness, Sharing, and Innovation - Proceedings of the 17th COTA International Conference of Transportation Professionals (pp. 49-58).
-            Reston VA USA: American Society of Civil Engineers.
-            <a href="https://doi.org/10.1061/9780784480915.006">
-              https://doi.org/10.1061/9780784480915.006
+            B Wang, K Shaaban & I Kim. (2019).
+            Reveal the hidden layer via entity embedding in traffic prediction.
+            Procedia Computer Science, Volume 151, 2019, Pages 163-170.
+            <a href="https://doi.org/10.1016/j.procs.2019.04.025">
+              https://doi.org/10.1016/j.procs.2019.04.025
             </a>
         </li>
         <li>
-            Wang, B. & Kim, I. (2018).
+            B Wang & I Kim. (2018).
             Short-term prediction for bike-sharing service using machine learning.
             Transportation Research Procedia, Volume 34, 2018, Pages 171-178, ISSN 2352-1465.
             <a href="https://doi.org/10.1016/j.trpro.2018.11.029">
@@ -86,11 +85,12 @@ header-img: "img/about-bg.jpg"
             </a>
         </li>
         <li>
-            Wang, B., Khaled, S. & Kim, I. (2019).
-            Reveal the hidden layer via entity embedding in traffic prediction.
-            Procedia Computer Science, Volume 151, 2019, Pages 163-170.
-            <a href="https://doi.org/10.1016/j.procs.2019.04.025">
-              https://doi.org/10.1016/j.procs.2019.04.025
+            B Wang, H Liang, & I Kim. (2018).
+            Social media application for illegal parking problem.
+            In H. Wang, J. Sun, J. Lu, L. Zhang, Y. Zhang, & S. Fang (Eds.), CICTP 2017: Transportation Reform and Change - Equity, Inclusiveness, Sharing, and Innovation - Proceedings of the 17th COTA International Conference of Transportation Professionals (pp. 49-58).
+            Reston VA USA: American Society of Civil Engineers.
+            <a href="https://doi.org/10.1061/9780784480915.006">
+              https://doi.org/10.1061/9780784480915.006
             </a>
         </li>
     </ul>
