--- a/about.html
+++ b/about.html
@@ -15,15 +15,17 @@ header-img: "img/about-bg.jpg"
 <div class="zh post-container">
 
     <!--copied from markdown -->
-    <blockquote>
+    <!-- <blockquote>
         <p>Yesterday, you said tomorrow.</p>
-    </blockquote>
-
-    <p>一个热爱篮球、热爱前沿科技技术的极客。就读 Monash University，主修交通运输工程智能交通方向，并对Web开发、深度学习略有研究。</p>
-
-    <p>一些作品和项目，见本博客的 <a href="/portfolio">Portfolio</a> 与 <a href="http://github.com/resuly" target="_blank">Github</a>；除了做交通课题研究，Web开发外，我也是<a href="http://inhi.kim" target="_blank"> Transport and Urban Planning Arena</a> 研究成员，<a href="http://video.v2tm.com/" target="_blank">帝国字幕组</a> 与 <a href="http://www.v2tm.com/" target="_blank">火麒麟</a> 的创立者。
-
-    <h5>出版文章</h5>
+    </blockquote> -->
+    <h5>About Me</h5>
+    <p>一个关注智能交通、Web 开发、机器学习的准极客</p>
+    <p>一些作品和项目，见本博客的 <a href="/portfolio">Portfolio</a> 与 <a href="http://github.com/resuly" target="_blank">Github</a>
+    <h5>联系</h5>
+    <p>
+      Email: Bo.Wang1@monash.edu <br>
+    </p>
+    <h5>文章</h5>
     <ul class="publication">
         <li>
             B Wang, K Shaaban & I Kim. (2019).
@@ -55,15 +57,14 @@ header-img: "img/about-bg.jpg"
 
 <!-- English Version -->
 <div class="en post-container">
-    <blockquote><p>Yesterday, you said tomorrow.</p></blockquote>
-
-    <p>Hi, I’m Bo from Monash University, majoring in Transportation Systems, also interested in ITS (Intelligent Transportation System), Web Development and Deep Learning. Most of the projects I have done are in the fields of ITS & Web Development as you can find this blog.</p>
-
+    <!-- <blockquote><p>Yesterday, you said tomorrow.</p></blockquote> -->
+    <h5>About Me</h5>
+    <p>A student from Monash University, majoring in Transportation Systems, also interested in ITS (Intelligent Transportation System), Web Development and Deep Learning. Most of the projects I have done are in the fields of ITS & Web Development as you can find this blog.</p>
     <p>FYI, I am a member of <a href="http://inhi.kim" target="_blank">Transport and Urban Planning Arena</a>, and the co-founder of Empire Subtitle-making Group and V2TM.com.</p>
 
     <h5>Contact</h5>
     <p>
-      Email: resuly (at) foxmail.com <br>
+      Email: Bo.Wang1@monash.edu <br>
     </p>
 
     <h5>Publication</h5>
