--- a/about.html
+++ b/about.html
@@ -28,6 +28,16 @@ header-img: "img/about-bg.jpg"
     <h5>文章</h5>
     <ul class="publication">
         <li>
+            B Wang, H Vu & I Kim. (2019).
+            Short-Term Traffic Prediction Using A Spatial-Temporal CNN Model With Transfer Learning.
+            Transportation Research Board 99th Annual Meeting, Washington, D.C., United States. (Accepted).
+        </li>
+        <li>
+            B Wang, K Shaaban & I Kim. (2019).
+            Revealing the hidden features in traffic prediction via entity embedding.
+            Personal and Ubiquitous Computing. (Accepted).
+        </li>
+        <li>
             B Wang, K Shaaban & I Kim. (2019).
             Reveal the hidden layer via entity embedding in traffic prediction.
             Procedia Computer Science, Volume 151, 2019, Pages 163-170.
@@ -69,6 +79,16 @@ header-img: "img/about-bg.jpg"
 
     <h5>Publication</h5>
     <ul class="publication">
+        <li>
+            B Wang, H Vu & I Kim. (2019).
+            Short-Term Traffic Prediction Using A Spatial-Temporal CNN Model With Transfer Learning.
+            Transportation Research Board 99th Annual Meeting, Washington, D.C., United States. (Accepted).
+        </li>
+        <li>
+            B Wang, K Shaaban & I Kim. (2019).
+            Revealing the hidden features in traffic prediction via entity embedding.
+            Personal and Ubiquitous Computing. (Accepted).
+        </li>
         <li>
             B Wang, K Shaaban & I Kim. (2019).
             Reveal the hidden layer via entity embedding in traffic prediction.
