--- a/projects/feature-visualization/index.html
+++ b/projects/feature-visualization/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>The interactive visualization for the prediction of 3D ConvNets</title>
+<title>Traffic features in neural networks</title>
 <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
 <link rel="stylesheet" href="css/style.css">
 </head>
