--- a/about.html
+++ b/about.html
@@ -35,7 +35,10 @@ header-img: "img/about-bg.jpg"
         <li>
             B Wang, K Shaaban & I Kim. (2019).
             Revealing the hidden features in traffic prediction via entity embedding.
-            Personal and Ubiquitous Computing. (Accepted).
+            Personal and Ubiquitous Computing. 
+            <a href="http://link.springer.com/article/10.1007/s00779-019-01333-x">
+                http://link.springer.com/article/10.1007/s00779-019-01333-x
+            </a>
         </li>
         <li>
             B Wang, K Shaaban & I Kim. (2019).
@@ -87,7 +90,10 @@ header-img: "img/about-bg.jpg"
         <li>
             B Wang, K Shaaban & I Kim. (2019).
             Revealing the hidden features in traffic prediction via entity embedding.
-            Personal and Ubiquitous Computing. (Accepted).
+            Personal and Ubiquitous Computing.
+            <a href="http://link.springer.com/article/10.1007/s00779-019-01333-x">
+                http://link.springer.com/article/10.1007/s00779-019-01333-x
+            </a>
         </li>
         <li>
             B Wang, K Shaaban & I Kim. (2019).
