--- a/projects/bikeflow/map.html
+++ b/projects/bikeflow/map.html
@@ -84,6 +84,14 @@ map.on('load', function () {
 
 });
 </script>
-
+<script>
+    var _hmt = _hmt || [];
+    (function() {
+      var hm = document.createElement("script");
+      hm.src = "https://hm.baidu.com/hm.js?d357403d92113a4faf6736dd0989a910";
+      var s = document.getElementsByTagName("script")[0];
+      s.parentNode.insertBefore(hm, s);
+    })();
+</script>
 </body>
 </html>
