--- a/projects/embedding/index.html
+++ b/projects/embedding/index.html
@@ -16,6 +16,15 @@ http://d3-annotation.susielu.com/#api
 <script src="d3-contour.v1.min.js"></script>
 <script src="d3-annotation.min.js"></script>
 <script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?d357403d92113a4faf6736dd0989a910";
+  var s = document.getElementsByTagName("script")[0];
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
+<script>
 
 var svg = d3.select("svg"),
     width = +svg.attr("width"),
