--- a/projects/feature-visualization/index.html
+++ b/projects/feature-visualization/index.html
@@ -55,5 +55,14 @@
 
         <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
         <script src="js/main.js"></script>
+        <script>
+            var _hmt = _hmt || [];
+            (function() {
+              var hm = document.createElement("script");
+              hm.src = "https://hm.baidu.com/hm.js?d357403d92113a4faf6736dd0989a910";
+              var s = document.getElementsByTagName("script")[0];
+              s.parentNode.insertBefore(hm, s);
+            })();
+        </script>
     </body>
 </html>
