--- a/projects/metro-service/najing.html
+++ b/projects/metro-service/najing.html
@@ -277,6 +277,16 @@ https://stackoverflow.com/questions/37599561/drawing-a-circle-with-the-radius-in
 	})();
 	</script>
 
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-159868386-1"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'UA-159868386-1');
+	</script>
+
 </body>
 
 </html>
