--- a/projects/3DResNet/flow.html
+++ b/projects/3DResNet/flow.html
@@ -40,5 +40,14 @@
     s.parentNode.insertBefore(hm, s);
   })();
   </script>
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-159868386-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'UA-159868386-1');
+  </script>
 </body>
 </html>
