--- a/projects/bikeflow/map.html
+++ b/projects/bikeflow/map.html
@@ -84,6 +84,7 @@ map.on('load', function () {
 
 });
 </script>
+
 <script>
     var _hmt = _hmt || [];
     (function() {
@@ -93,5 +94,15 @@ map.on('load', function () {
       s.parentNode.insertBefore(hm, s);
     })();
 </script>
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-159868386-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'UA-159868386-1');
+</script>
+
 </body>
 </html>
