--- a/projects/embedding/index.html
+++ b/projects/embedding/index.html
@@ -15,6 +15,7 @@ http://d3-annotation.susielu.com/#api
 <script src="d3.v4.min.js"></script>
 <script src="d3-contour.v1.min.js"></script>
 <script src="d3-annotation.min.js"></script>
+
 <script>
 var _hmt = _hmt || [];
 (function() {
@@ -24,6 +25,18 @@ var _hmt = _hmt || [];
   s.parentNode.insertBefore(hm, s);
 })();
 </script>
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-159868386-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-159868386-1');
+</script>
+
+
 <script>
 
 var svg = d3.select("svg"),
