--- a/deva/index.html
+++ b/deva/index.html
@@ -17,7 +17,7 @@
     <div class="wrap">
       <div id="pitch">
         <h2>啊哦~ 你已进入Deva领地</h2>
-        <a href="../hi/" id="download">Here<div class="hover"></div></a>  
+        <a href="./hi/" id="download">Here<div class="hover"></div></a>  
         <div class="arrows">
           <h4 class="developerMode">
             点这里
