Fix the L2 result

--- a/projects/dl/index.html
+++ b/projects/dl/index.html
@@ -37,7 +37,7 @@
             </div>
         </div>
 
-        <h2 style="margin-top:30px">Prediction on 2020-03-07, Saturday</h2>
+        <!-- <h2 style="margin-top:30px">Prediction on 2020-03-07, Saturday</h2>
         <hr>
         <div class="note">
             <div class="video-container">
@@ -68,7 +68,7 @@
                     Your browser does not support the video tag.
                 </video>
             </div>
-        </div>
+        </div> -->
         
         <div class="note">
             <p>
