--- a/projects/dl/index.html
+++ b/projects/dl/index.html
@@ -9,7 +9,7 @@
         <h1>Traffic Speed Prediction using High-dimensional Distributional Loss</h1>
         <div class="note">
             <p>
-                This page proposed a new High-dimensional Distributional Loss function (DL) for neural networks models. The videos on this page shows the dynamic forecasting results of different days by LSTM+DL model.
+                This page proposed a new High-dimensional Distributional Loss function (DL) for neural networks models. The videos on this page shows the dynamic forecasting results of different days.
             </p>
             <p>
                 For more information, please refer to this paper: (Link Available after review).
@@ -36,43 +36,10 @@
                 </video>
             </div>
         </div>
-
-        <!-- <h2 style="margin-top:30px">Prediction on 2020-03-07, Saturday</h2>
-        <hr>
-        <div class="note">
-            <div class="video-container">
-                <video controls autoplay loop>
-                    <source src="video/2020-03-07.mp4" type="video/mp4">
-                    Your browser does not support the video tag.
-                </video>
-            </div>
-        </div>
-
-        <h2 style="margin-top:30px">Prediction on 2020-03-13, Friday</h2>
-        <hr>
-        <div class="note">
-            <div class="video-container">
-                <video controls autoplay loop>
-                    <source src="video/2020-03-13.mp4" type="video/mp4">
-                    Your browser does not support the video tag.
-                </video>
-            </div>
-        </div>
-
-        <h2 style="margin-top:30px">Prediction on 2020-03-18, Wednesday</h2>
-        <hr>
-        <div class="note">
-            <div class="video-container">
-                <video controls autoplay loop>
-                    <source src="video/2020-03-18.mp4" type="video/mp4">
-                    Your browser does not support the video tag.
-                </video>
-            </div>
-        </div> -->
         
         <div class="note">
             <p>
-                Made by Bo, June 2020.
+                Made by Bo, Oct 2020.
             </p>
         </div>
 
