--- a/projects/dl/index.html
+++ b/projects/dl/index.html
@@ -1,15 +1,15 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Traffic Speed Prediction using High-dimensional Distributional Loss</title>
+        <title>Distributional Prediction of Short-term Traffic using Neural Networks Models</title>
         <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        <h1>Traffic Speed Prediction using High-dimensional Distributional Loss</h1>
+        <h1>Distributional Prediction of Short-term Traffic using Neural Networks Models</h1>
         <div class="note">
             <p>
-                This page proposed a new High-dimensional Distributional Loss function (DL) for neural networks models. The videos on this page shows the dynamic forecasting results of different days.
+                This page proposed a new High-dimensional Distributional Prediction (HDP) framework for neural networks based regression forecasting models in transportation. The videos on this page shows the dynamic forecasting results of different days.
             </p>
             <p>
                 For more information, please refer to this paper: (Link Available after review).
